[tool.poetry]
name = "repl_python3_erpscrap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
multipledispatch = "^0.6.0"
bs4 = "^0.0.1"
timeout-decorator = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
